# tinfoil-conformance

./: .gitignore  README.md  SPEC_COVERAGE.md  gen_report.py
.github/workflows/: conformance-report.yml  run.yml
docs/: verify-attestation-tdx-plan.md
fixturegen/: attestation_sev_phase1_fixtures.py  attestation_sev_phase2_fixtures.py  attestation_sev_phase4_fixtures.py  attestation_sev_phase4b_fixtures.py  attestation_sev_phase4c_fixtures.py  attestation_tdx_phase2_fixtures.py  attestation_tdx_phase2b_fixtures.py  attestation_tdx_phase3_fixtures.py  attestation_tdx_phase4_fixtures.py  attestation_tdx_phase4b_fixtures.py  coverage_fixtures.py  measurement_fixtures.py  signed_fixtures.py  verify_full_phase1_fixtures.py
fixturegen/lib/: __init__.py  bundle.py  dsse.py  fulcio.py  keys.py  rekor.py  sct.py  sev_synth.py  spec.py  tdx_synth.py  trust_root.py
harness/: pyproject.toml
harness/tinfoil_conformance/: __init__.py  cli.py  divergence.py  report.py  runner.py
schemas/: capabilities.schema.json  verify-attestation-sev.input.schema.json  verify-attestation-sev.output.schema.json  verify-attestation-tdx.input.schema.json  verify-attestation-tdx.output.schema.json  verify-ehbp-key-binding.input.schema.json  verify-ehbp-key-binding.output.schema.json  verify-full.input.schema.json  verify-full.output.schema.json  verify-measurement.input.schema.json  verify-measurement.output.schema.json  verify-sigstore.input.schema.json  verify-sigstore.output.schema.json
vectors/attestation-sev/200-real-sev-snp-happy/: expected.json  (+2 more)
vectors/sigstore/: README.md
(+414 files in other folders)
